# Advent-Of-Code-2024

./: Cargo.toml
src/: day1.rs  day2.rs  day3.rs  lib.rs
