cargo-features = ["codegen-backend"]
[package]
name = "yr2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
arrayvec = "0.7.6"
memchr = "2.7.4"
mimalloc = { version = "0.1.43", default-features=false }
nohash-hasher = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
inherits = "release"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
debug-assertions = true
